[package]
name = "pi_approximator"
version = "0.1.0"
authors = ["Afront <3943720+Afront@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = "0.2.6"
num-rational = "0.2.3"
num-traits = "0.2.11"